--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-# grk
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ゴクラクエンターテイメント welcome</title>
+    <link rel="stylesheet" href="page/main.css">
+</head>
+<body>
+    <h1>welcome!</h1>
+    <h1><a href="page/Home.html">ホーム</a></h1>
+</body>
+</html>
