--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ゴクラクエンターテイメント welcome</title>
-    <link rel="stylesheet" href="page/main.css">
+    <link rel="stylesheet" href="styles/common.css">
 </head>
 <body>
-    <h1>welcome!</h1>
-    <h1><a href="page/Home.html">ホーム</a></h1>
+    <div class="title">
+        <h1 class="title-text">Gokuraku Entertainment</h1>
+    </div>
+
+    <div class="title-sub">
+        <h3 class="sub">ゴクラクエンターテイメントは、動画投稿、サイト作成など、様々な事業を行っております。</h3>
+    </div>
+
+    <div class="main">
+        <h2 class="head">ゲーム</h2>
+        <h2 class="head">/h2>
+    </div>
+    <!-- <h1><a href="page/Home.html">ホーム</a></h1> -->
 </body>
 </html>
